Fix background on Safari, add basic css for video

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,51 @@
     body {
         font-family: 'Montserrat', sans-serif !important;
         height: 100%;
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+
+    .intro {
+        height: 100vh;
+        /* Use static image in case the video is not loaded or loaded only after the first scroll */
+        background-image: url(../resources/bg.jpeg);
+        background-size: cover;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-position: 50% 50%;
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-attachment: scroll;
+        background-color: #999;
+    }
+
+    .intro video {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+    }
+    .intro p {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 80px;
+    }
+    .intro h1 {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 80px;
+    }
+    .intro h2 {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        opacity: 0;
     }
     
     .is-beer-image {
@@ -46,7 +91,7 @@
         background-position: 50% 50%;
         background-position: center center;
         background-repeat: no-repeat;
-        background-attachment: fixed;
+        background-attachment: scroll;
         background-color: #999;
     }
     
@@ -54,6 +99,7 @@
         color: white;
         mix-blend-mode: hard-light;
     }
+
     
     html {
         scroll-behavior: smooth;
@@ -110,4 +156,10 @@
     .small-figure-img {
         margin-bottom: .5rem;
         line-height: 0.1;
+    }
+
+    #first #second #third #fourth #fifth {
+        opacity: 0%;
+        font-size: 2.5rem;
+        
     }
